* Wed Jun 12 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.4.0-0
- Update CI artifacts
- Remove Puppet 4 support
- Add Puppet 6 support

* Wed Jun 12 2019 Robert Clark <rbclark@mitre.org> - 3.4.0-0
- Fix error in README regarding proper svckill exception outside of Hiera

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 3.3.1-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Fixed bad URLs in the README.md

* Tue Oct 02 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.3.0-0
- Added Redhat 7.5 services to default service ignore list.
- Updated ruby version to 2.4.4
- Updated Gemfile to ask for puppet 5
- Update badges and contribution guide URL in README.md

* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 3.3.0-0
- Update Hiera 4 to Hiera 5

* Fri Aug 24 2018 Nick Miller <nick.miller@onypoint.com> - 3.3.0-0
- Add support for Puppet 5 and OEL

* Fri Jul 27 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.6-0
- Add simp_client_bootstrap service to the ignore list.  If this
  is omitted from the ignore list, svckill will kill the bootstrap
  process of SIMP clients, while they are boostrapping the system.

* Fri Jun 22 2018 Nick Miller <nick.miller@onypoint.com> - 3.2.6-0
- Update CI assets

* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.5-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Mon Oct 02 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.4-0
- Fix bug in which svckill provider can fail on a server for which
  there are are no aliased, SystemD services.

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.3-0
- Update concat version in metadata.json & build/rpm_metadata/requires

* Tue Aug 01 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.2-0
- Tweak spec tests so will run in docker containers

* Fri Jun 23 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.1-0
- Fix bug whereby svckill provider's insync_values? emits