@@ -35,6 +35,8 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
+  - for x in ${HOME}/.rvm/gems/*; do gem uninstall -I -x -i "${x}" -v '>= 1.17' bundler || true; gem uninstall -I -x -i "${x}@global" -v '>= 1.17' bundler || true; done
+  - gem install -v '~> 1.17' bundler
 
 global:
   - STRICT_VARIABLES=yes
@@ -93,7 +95,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "dq3M3wvqqjITUyPNEONAl69ACtt26i0PUfNnqJlMA9y9ZReqB+htMGlsFrsgbfMHBTnpz7Ywn1/A8VXjByXa9Xk/uHLMGmlOlu8E8k0UFf/dVr3yBQ6go/pslgm7t/Kv2nzn6Mj0nY9weo1SWuvE5xrwjPxBZbsPOvpluCtQ66SOQa9nztGlKMXwra7x43EkkZmcM5lFCjD47pEnIzwjBP1oGAwKtH+Z7O9tPstzvQj2kNW8pqLLmFRGhVAoIRCleFTksf67vDtdfCEvC/Ggw8iV3wH85bPdqSX/DiMSYlR6zpbBQYy+IqX0NdaysdBiDtPgttMV1pACLRVoBdCGJME0h1pF1UesAcqnUoCeZk9g+VeQ+MZep7ki2DwRTZfx6xRLgV9N09JJhKOxVO1YUggtcDEeinCteKTiLxpZ8hzqEegcz9jnSqno5tzismHV3d5kQYHawD0YWPyYqJnwZY9rZ9/9qhg/zFDZ5Ata67UAOzq9Ca7R4cQ2nadEMQjKvtvtX1V27HRiA7JZRIVt5tCalKbYqVe6hE/B3pTOHiNWswv4OoapOnuV4nwXr1OHvrTtZqSpPmOJ3elQj5TbR76rFYCIOhpOoK/FJijoIXHR/klpX3lfMf6+iXlko8WVvfF2EqTie494oeV9lONWHzFZXONSd9UNNsE8WwsPMQI="
+            secure: "k9Nx0/6V6FEOzYPhsn8410ZGA7mcYc/H1vR+YH02yDhKLRILI1XWZ8vjXobvY+1bdnhbUj8O8gUjaZv7PIztaRzRqu2FeTJb9R3fFhXpt2Uv9ZY+5Hq+LoOpEj8LaXCtVHlss8EVxU7dXg96NxrMenUeB5WPDrJdQu+lEkcvmNNysCLljmLda9MlGTBlsdpugMsM6b+k6LIF64hovup4ewQSoHq3RxciHN3rjn/K8e7oY3tclD+rISUZOTeLr+fjS3LhAW2R5u+0FjuzIE/Gcq/szuQC5N2CAegVt8H6q7DRjkklVI0L6FXCoAd0t6CHwZ+PlftphAqh4FjYrtTOaUirPpsKWMLfHSWANXneVZ8uhqDiMTNLMYnOewZrTyyLqIh/d7xbEcv6uQuCdbSoWmupZfkXAKvoecMA3+3y4dVJmf/olqlz4KSE7UMKettG/RogtSIZ6YDhfuWiI6P29NZDjzhKHLmmPxl4upaiEVt6XoxDeh2fqKpe3ggURIcG7xv7CbzCmhYz4EZ4a4rd6ieUvjrpGLshke0O3PZBHYXA84fnWiUb5tQCGAX0pE0sJmGqnufHeMzBOi7JDBp8XLZAjEFcIjjn+3Tb9whZh+gw5RVUH768fp2gH+STJKNGfz9ClXyKJkEFb2ZmYboKZ7WptnFMM6TmcC2O4RYT4Yo="
           skip_cleanup: true
           on:
             tags: true
@@ -101,7 +103,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "ikAlyXfiiaKjMOhEI/ETqd/1ZkoCV4zwRQGD0mu/Xs+ViDSZhykVE+Kd53VS2GwiAQfn5qqFaDIv2W6H0ZWv/Zh9Z91v1SIqnvj+XAlbaBR/dOYZ23NDw6GwgtSLCxtVRHl0TyAfI+D5+/hKFmfP/qt4K4V/ENvSZGUYQS0veUU3R4SfwICmRvdFN8MeVwfdaDhr/FZU6d0jl0rvvqnWvUVc8nnrBjCYpX+ivZrKG1SDAVD4dAFJq9g7hN0dHly0y30F3fudtjN3hRPMnBQenEJV0ATDq5KJdXBHHAPrht9MLp6g9YJsD9ILqzLHksEpVAC1izyEF63gW8SIdd3HJBDr4zUllKv5XGcfSupzaZF6MpMolPX/WypG5xH1RXF0xsjBuYP6vpSpz8iiAZy/OUGGv97pcRMqVgYJuBreLt7j6yOx/0KiyFvYPVD0+oKG4yZpwwhlM7DAM7ZecFIe3nhn+MZ1l9mqk0K5XBjmJLsbZQ7sRd6h+m+rK3ZQyUdg6SyShqJR0USIYWSGjjbG9HZrwOvAvi/GqhB32UM1PSlD/y4jv2zQQUbzsy7XNmwEID/kEsb6v853zpitLE98LGgsrBtJ2e5QdRB8TJWDjmTu/hKGWO/TUM9sZzjY7vfVy9deCjp6fvKKuAeS1vwfLa72cBrEA0fgaSFamHytM7w="
+            secure: "bweemJAHZQN8lEEDRqR5JPyyd4+5rgzqWvKfUHsynEtzuwlE2xesQ7MUpqS9O+qOQaltFyjLzjqVvaDhAivxL8hzJPTChBqT26fCCSw5eE36bpZPlXvru8BaThjjEDvgGqZAjSDKOuS8rLwgwRMD6ZiBVHZ7XEQADAEtWtBsV9LsoUJYU6noTTxkGG4MHya5I6erW9GUbyJ90UIvtMSyjQ5pLCirCOgsNUD/RF0wNl8jukAuQbQRRT+LGBNENS3PnvLCk52AeizUpR15bMcrgPv0338WnRfGufz+itRlx4ZU0899COFpuPSBmuLP4WQp1mTRVGa6cMFWzA19yhjzhOX68Pyv/hBgFzlsdsqjLK7XvE9Ux2KravAnCe833K5b6i6kcok5+KDrdjQxvyh0TGBIA+75sLx8VViKTjXqxf2OEL5W1VEgmhxQPCkFh38oBvE1rkcFLexoFVyAU+Jblu6yPrw3fuUUMLGalEkYjyHLqUYU7x+Kd6NotDrQ7OxfVWbfrBwpDC9xn/wVKASs3kkcHzYfc6y1xzpJ5Xlod2nTa+FXo7q2yECUgnjGVu680t/wCDydOY4GtsaDRRbgi5qrIm5I7Ie42sA2fQOmkix/XFIcm/EUsdTx71OllfdWOVteoa+4JiWSVgskm0PG9JEHiVwtScxr26jzVO6UaII="
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
