@@ -1,3 +1,6 @@
+* Thu Jun 13 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.4.1-0
+- Add v2 compliance_markup data
+
 * Wed Jun 12 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.4.0-0
 - Update CI artifacts
 - Remove Puppet 4 support
